# projeto-final-grupo-7-2022-2

./: LICENSE
versao_final/: app.py  barra_deslocamento.py  bomba_de_asma.py  botao.py  botao_texto_rotacionado.py  botao_volume.py  callback_de_evento.py  configuracoes.py  controlador_de_music.py  controlador_de_musica.py  entrada_texto_usuario.py  evento_tps.py  fase.py  gerenciador_de_grupos.py  jogo.py  maquina_de_estado.py  pyproject.toml  singleton.py  spritesheet.py  superficie_posicionada.py  tempo.py
versao_final/View/: camera.py  fase_construtor.py  mapa.py  tile.py  transicao.py
versao_final/View/mapas/: super_lamparina.tiled-session
versao_final/entidades/: __init__.py  arqueiro.py  bomba_de_asma.py  entidade.py  flecha.py  guerreiro.py  inimigo.py  jogador.py  ladino.py
versao_final/entidades/arma/: __init__.py  arma.py  bala.py  faca.py  pistola.py
versao_final/estados/: __init__.py  estado.py  fim_de_jogo.py  menu_creditos.py  menu_opcoes.py  menu_pausa.py  menu_principal.py  menu_ranking.py  menu_registro.py  menu_vitoria.py  partida.py
versao_final/eventos/: __init__.py
versao_final/fase/: __init__.py  camera.py  fase.py  gerenciador_de_grupos.py  tempo.py
versao_final/recursos/sprites/: ladino.json  player.json  (+1 more)
versao_final/utilidades/: __init__.py  armazenamento.py  callback_de_evento.py  configuracoes.py  controlador_de_musica.py  maquina_de_estado.py
versao_final/visualizacao/: __init__.py  barra_deslocamento.py  botao.py  botao_texto_rotacionado.py  botao_volume.py  entrada_texto_usuario.py  spritesheet.py  tile.py  transicao.py
(+59 files in other folders)
