[tool.poetry]
name = "prototipo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
pytmx = "^3.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
